Update documentation (#225)